horus_manager/src/monitor_tui/snapshots/horus_manager__monitor_tui__tests__snapshot_help_overlay.snap
---
source: horus_manager/src/monitor_tui/tests.rs
expression: render_to_string(&buffer)
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                    HORUS TUI v0.1.9 | LIVE | Nodes: 5 | Topics: 4                                    │
│ Overview  |  Nodes  |  Topics  |  TransformFrame  |  Packages  |  Params  |  Recordings                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Help──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                      │
│HORUS Terminal Monitor - Help                                                                                         │
│                                                                                                                      │
│Navigation:                                                                                                           │
│  Tab        - Next tab (Overview  Nodes  Topics  TF  Packages  Params)                                               │
│  Shift+Tab  - Previous tab                                                                                           │
│  ↑/↓        - Navigate lists                                                                                         │
│  PgUp/PgDn  - Scroll quickly                                                                                         │
│                                                                                                                      │
│General Actions:                                                                                                      │
│  p          - Pause/Resume updates                                                                                   │
│  q          - Quit monitor                                                                                           │
│  ?/h        - Show this help                                                                                         │
│                                                                                                                      │
│Nodes/Topics Tab:                                                                                                     │
│  Enter      - Open log panel for selected node/topic                                                                 │
│  ESC        - Close log panel                                                                                        │
│  Shift+↑↓   - Switch between nodes/topics while log panel is open                                                    │
│                                                                                                                      │
│Packages Tab:                                                                                                         │
│  ← →        - Switch between Local Workspaces and Global Packages                                                    │
│  Enter      - Drill into selected workspace to view packages                                                         │
│  ESC        - Navigate back to workspace list                                                                        │
│                                                                                                                      │
│Parameters Tab:                                                                                                       │
│  a          - Add new parameter                                                                                      │
│  e          - Edit selected parameter                                                                                │
│  d          - Delete selected parameter                                                                              │
│  r          - Refresh parameters from disk                                                                           │
│  s          - Save parameters to disk                                                                                │
│                                                                                                                      │
│Tab Descriptions:                                                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
                                               Press any key to close help
