horus_manager/src/monitor_tui/snapshots/horus_manager__monitor_tui__tests__snapshot_log_panel_open.snap
---
source: horus_manager/src/monitor_tui/tests.rs
expression: render_to_string(&buffer)
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                    HORUS TUI v0.1.9 | LIVE | Nodes: 5 | Topics: 4                                    │
│ Overview  |  Nodes  |  Topics  |  TransformFrame  |  Packages  |  Params  |  Recordings                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Nodes───────────────────────┐┌Node: lidar_driver──────────────────────────────────────────────────────────────────────┐
│    Node Name               ││                                                                                        │
│ ○  lidar_driver            ││No logs available                                                                       │
│ ○  planner                 ││                                                                                        │
│ ○  motor_controller        ││Logs will appear here when the node/topic                                               │
│ ○  camera_node             ││starts publishing or subscribing                                                        │
│ ○  safety_monitor          ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││Showing 0 logs |  Scroll | ESC Close                                                    │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────────┘
                          [ESC] Close | [] Scroll Logs | [Shift+] Switch Node/Topic | [Q] Quit
