horus_manager/src/monitor_tui/snapshots/horus_manager__monitor_tui__tests__snapshot_nodes_100_items.snap
---
source: horus_manager/src/monitor_tui/tests.rs
expression: render_to_string(&buffer)
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                   HORUS TUI v0.1.9 | LIVE | Nodes: 100 | Topics: 0                                   │
│ Overview  |  Nodes  |  Topics  |  TransformFrame  |  Packages  |  Params  |  Recordings                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Node Details - Use  to select, Enter to view logs─────────────────────────────────────────────────────────────────────┐
│ Name               PID      CPU      Memory     Status     Publishes                    Subscribes                   │
│ node_000           2000     0.0%     0 MB       Stopped    topic_0                      -                            │
│ node_001           2001     0.8%     0 MB       Stopped    topic_1                      topic_0                      │
│ node_002           2002     1.6%     1 MB       Stopped    topic_2                      topic_1                      │
│ node_003           2003     2.4%     1 MB       Stopped    topic_3                      topic_2                      │
│ node_004           2004     3.2%     2 MB       Stopped    topic_4                      topic_3                      │
│ node_005           2005     4.0%     2 MB       Stopped    topic_5                      topic_4                      │
│ node_006           2006     4.8%     3 MB       Stopped    topic_6                      topic_5                      │
│ node_007           2007     5.6%     3 MB       Stopped    topic_7                      topic_6                      │
│ node_008           2008     6.4%     4 MB       Stopped    topic_8                      topic_7                      │
│ node_009           2009     7.2%     4 MB       Stopped    topic_9                      topic_8                      │
│ node_010           2010     8.0%     5 MB       Stopped    topic_10                     topic_9                      │
│ node_011           2011     8.8%     5 MB       Stopped    topic_11                     topic_10                     │
│ node_012           2012     9.6%     6 MB       Stopped    topic_12                     topic_11                     │
│ node_013           2013     10.4%    6 MB       Stopped    topic_13                     topic_12                     │
│ node_014           2014     11.2%    7 MB       Stopped    topic_14                     topic_13                     │
│ node_015           2015     12.0%    7 MB       Stopped    topic_15                     topic_14                     │
│ node_016           2016     12.8%    8 MB       Stopped    topic_16                     topic_15                     │
│ node_017           2017     13.6%    8 MB       Stopped    topic_17                     topic_16                     │
│ node_018           2018     14.4%    9 MB       Stopped    topic_18                     topic_17                     │
│ node_019           2019     15.2%    9 MB       Stopped    topic_19                     topic_18                     │
│ node_020           2020     16.0%    10 MB      Stopped    topic_20                     topic_19                     │
│ node_021           2021     16.8%    10 MB      Stopped    topic_21                     topic_20                     │
│ node_022           2022     17.6%    11 MB      Stopped    topic_22                     topic_21                     │
│ node_023           2023     18.4%    11 MB      Stopped    topic_23                     topic_22                     │
│ node_024           2024     19.2%    12 MB      Stopped    topic_24                     topic_23                     │
│ node_025           2025     20.0%    12 MB      Stopped    topic_25                     topic_24                     │
│ node_026           2026     20.8%    13 MB      Stopped    topic_26                     topic_25                     │
│ node_027           2027     21.6%    13 MB      Stopped    topic_27                     topic_26                     │
│ node_028           2028     22.4%    14 MB      Stopped    topic_28                     topic_27                     │
│ node_029           2029     23.2%    14 MB      Stopped    topic_29                     topic_28                     │
│ node_030           2030     24.0%    15 MB      Stopped    topic_30                     topic_29                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
                 [ENTER] View Logs | [↑↓] Navigate | [TAB] Switch Tab | [P] Pause | [?] Help | [Q] Quit
