horus_manager/src/monitor_tui/snapshots/horus_manager__monitor_tui__tests__snapshot_nodes_all_health_states.snap
---
source: horus_manager/src/monitor_tui/tests.rs
expression: render_to_string(&buffer)
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                    HORUS TUI v0.1.9 | LIVE | Nodes: 5 | Topics: 0                                    │
│ Overview  |  Nodes  |  Topics  |  TransformFrame  |  Packages  |  Params  |  Recordings                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Node Details - Use  to select, Enter to view logs─────────────────────────────────────────────────────────────────────┐
│ Name               PID      CPU      Memory     Status     Publishes                    Subscribes                   │
│ running_node       3000     0.0%     32 MB      Stopped    -                            -                            │
│ inactive_node      3001     20.0%    64 MB      Stopped    -                            -                            │
│ stopped_node       3002     40.0%    96 MB      Stopped    -                            -                            │
│ error_node         3003     60.0%    128 MB     Stopped    -                            -                            │
│ starting_node      3004     80.0%    160 MB     Stopped    -                            -                            │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
                 [ENTER] View Logs | [↑↓] Navigate | [TAB] Switch Tab | [P] Pause | [?] Help | [Q] Quit
