horus_manager/src/monitor_tui/snapshots/horus_manager__monitor_tui__tests__snapshot_nodes_empty.snap
---
source: horus_manager/src/monitor_tui/tests.rs
expression: render_to_string(&buffer)
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                    HORUS TUI v0.1.9 | LIVE | Nodes: 0 | Topics: 0                                    │
│ Overview  |  Nodes  |  Topics  |  TransformFrame  |  Packages  |  Params  |  Recordings                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Node Details - Use  to select, Enter to view logs─────────────────────────────────────────────────────────────────────┐
│Name               PID      CPU      Memory     Status     Publishes                    Subscribes                    │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
                 [ENTER] View Logs | [↑↓] Navigate | [TAB] Switch Tab | [P] Pause | [?] Help | [Q] Quit
