horus_manager/src/monitor_tui/snapshots/horus_manager__monitor_tui__tests__snapshot_nodes_long_names.snap
---
source: horus_manager/src/monitor_tui/tests.rs
expression: render_to_string(&buffer)
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                    HORUS TUI v0.1.9 | LIVE | Nodes: 1 | Topics: 0                                    │
│ Overview  |  Nodes  |  Topics  |  TransformFrame  |  Packages  |  Params  |  Recordings                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Node Details - Use  to select, Enter to view logs─────────────────────────────────────────────────────────────────────┐
│ Name               PID      CPU      Memory     Status     Publishes                    Subscribes                   │
│ very_long_robot_se 9999     99.9%    4.0GB      Stopped    extremely_long_topic_name_fo another_very_long_topic_name_│
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
                 [ENTER] View Logs | [↑↓] Navigate | [TAB] Switch Tab | [P] Pause | [?] Help | [Q] Quit
