horus_manager/src/monitor_tui/snapshots/horus_manager__monitor_tui__tests__snapshot_nodes_populated.snap
---
source: horus_manager/src/monitor_tui/tests.rs
expression: render_to_string(&buffer)
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                    HORUS TUI v0.1.9 | LIVE | Nodes: 5 | Topics: 4                                    │
│ Overview  |  Nodes  |  Topics  |  TransformFrame  |  Packages  |  Params  |  Recordings                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Node Details - Use  to select, Enter to view logs─────────────────────────────────────────────────────────────────────┐
│ Name               PID      CPU      Memory     Status     Publishes                    Subscribes                   │
│ lidar_driver       1001     12.5%    48.0MB     Stopped    scan                         -                            │
│ planner            1002     45.2%    128.0MB    Stopped    cmd_vel                      scan, odom                   │
│ motor_controller   1003     5.1%     16.0MB     Stopped    odom                         cmd_vel                      │
│ camera_node        1004     0.0%     256.0MB    Stopped    image                        -                            │
│ safety_monitor     1005     2.3%     8.0MB      Stopped    -                            scan, odom, cmd_vel          │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
                 [ENTER] View Logs | [↑↓] Navigate | [TAB] Switch Tab | [P] Pause | [?] Help | [Q] Quit
